--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,46 @@ form {
     display: block;
 }
 
+.clear input,
+.submit input {
+    background: #e2e0dc;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.clear,
+.submit {
+    display: inline;
+}
+
+.input-section {
+    margin: 10x;
+}
+
+input {
+    padding: 5px 10px;
+    border-radius: 3px;
+}
+
+textarea {
+    border-radius: 3px;
+    padding: 10px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+}
+
+.checkbox {
+    letter-spacing: 1.5px;
+}
+
+select {
+    width: 100px;
+    padding: 5px 0;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
 
 /* ===========================================
 
