added hover effect to buttons and moved php folders to appropraite location

--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,14 @@ form {
     display: inline;
 }
 
+.clear input:hover {
+    background: gray;
+}
+
+.submit input:hover {
+    background: gray;
+}
+
 .input-section {
     margin: 10x;
 }
