prepared all php forms

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
+/* ===================================================
+
+univeral styling
+
+
+
+=======================================================*/
+
 * {
     margin: 0;
     padding: 0;
